mdapipkg/unpackaged/objects/Fortnite_Player__c.object
<CustomObject>
    <description>Represents player data such as uid, username, stats, etc.</description>
    <fields>
        <fullName>platforms__c</fullName>
        <description>The platforms that the player has used</description>
        <label>platforms</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>seasons__c</fullName>
        <description>The seasons that the player has played</description>
        <label>seasons</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>uid__c</fullName>
        <description>Unique ID for the player</description>
        <externalId>true</externalId>
        <label>uid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <description>The unique userrname for the player</description>
        <externalId>true</externalId>
        <label>username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Fortnite Player</label>
    <listViews>
        <fullName>All</fullName>
        <columns>username__c</columns>
        <columns>uid__c</columns>
        <columns>platforms__c</columns>
        <columns>seasons__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fortnite Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>